--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
     <head>
         <title>Hello World</title>
+        <style>
+            h1 {
+                color: red;
+            }
+        </style>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello World, nice to meet you!</h1>
     </body>
 
 </html>
