--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hello World</title>
+        <title>Hello World, nice to meet you</title>
         <style>
             h1 {
                 color: red;
