--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <h1>Hello World, nice to meet you!</h1>
+
+        <a href="contact.html">Contact Us</a>
     </body>
 
 </html>
